tests/errors/array_size_02.f90
program arrays_02
    implicit none
    integer :: a(3)
    integer :: size_a
    size_a = size(a, 1, dim=1)
end
